# refactorial

./: .gitignore  CMakeLists.txt  Refactoring.cpp  main.cpp  methodMove.cpp  yaml-util.h
Transforms/: AccessorsTransform.cpp  ExtractParameterTransform.cpp  FunctionRenameTransform.cpp  IdentityTransform.cpp  MethodMoveTransform.cpp  RecordFieldRenameTransform.cpp  RenameTransforms.h  Transforms.cpp  Transforms.h  TypeRenameTransform.cpp
